--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "f1690dba",
+   "execution_count": 108,
+   "id": "371a385b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,15 @@
     "from collections import Counter\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import confusion_matrix, classification_report"
+    "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn import tree"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ac7c6a9e",
+   "id": "1c4384db",
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a79421b",
+   "id": "97018aa1",
    "metadata": {},
    "source": [
     "#### Filter to red wines only"
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fc9a7af5",
+   "id": "a3e76ae3",
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc6be13c",
+   "id": "09e0e88c",
    "metadata": {},
    "source": [
     "#### Categorize quality to >=7 as Good and < 7 and Not good"
@@ -227,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e66169a6",
+   "id": "73fb4871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "22bd6091",
+   "id": "a47ff264",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0941d4e2",
+   "id": "71a2bd10",
    "metadata": {},
    "source": [
     "#### Create Target and Features"
@@ -521,7 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "75f8230c",
+   "id": "1165fc9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "d6807cfb",
+   "id": "48c5b62b",
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d0ad17c5",
+   "id": "eee76bb9",
    "metadata": {},
    "outputs": [
     {
@@ -786,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2b19294",
+   "id": "ceb86d24",
    "metadata": {},
    "source": [
     "#### Scale the data"
@@ -795,7 +796,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "6535345b",
+   "id": "51a0f211",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -805,7 +806,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "b87e81ed",
+   "id": "48a01a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +816,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f64d6009",
+   "id": "1fdb64f9",
    "metadata": {},
    "source": [
     "#### Split the data into test and train"
@@ -823,30 +824,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "id": "8eb64f6d",
+   "execution_count": 82,
+   "id": "fe937682",
    "metadata": {},
    "outputs": [],
    "source": [
     "# YOUR CODE HERE\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, random_state=1)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, random_state=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "ac818b0d",
+   "execution_count": 83,
+   "id": "f36199b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    1027\n",
-       "1     172\n",
+       "0    1033\n",
+       "1     166\n",
        "Name: quality_2, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -857,8 +858,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "f8190adf",
+   "execution_count": 84,
+   "id": "ecf7aa08",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +868,7 @@
        "(1599, 11)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ebdf197",
+   "id": "b58ce1e4",
    "metadata": {},
    "source": [
     "## Logisitic model"
@@ -886,8 +887,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "f2e938ed",
+   "execution_count": 85,
+   "id": "4434669d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,8 +897,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "5b72c1fd",
+   "execution_count": 86,
+   "id": "b347df20",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +907,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -917,7 +918,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e0e26d5",
+   "id": "996329f6",
    "metadata": {},
    "source": [
     "#### Model predictions"
@@ -925,8 +926,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "4872ac19",
+   "execution_count": 87,
+   "id": "28c2ff36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,16 +936,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "72fd6681",
+   "execution_count": 88,
+   "id": "c7bdb531",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[340  15]\n",
-      " [ 31  14]]\n"
+      "[[329  20]\n",
+      " [ 29  22]]\n"
      ]
     }
    ],
@@ -955,8 +956,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "cef1b354",
+   "execution_count": 89,
+   "id": "10833b16",
    "metadata": {},
    "outputs": [
     {
@@ -965,12 +966,109 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.92      0.96      0.94       355\n",
-      "           1       0.48      0.31      0.38        45\n",
+      "           0       0.92      0.94      0.93       349\n",
+      "           1       0.52      0.43      0.47        51\n",
       "\n",
-      "    accuracy                           0.89       400\n",
-      "   macro avg       0.70      0.63      0.66       400\n",
-      "weighted avg       0.87      0.89      0.87       400\n",
+      "    accuracy                           0.88       400\n",
+      "   macro avg       0.72      0.69      0.70       400\n",
+      "weighted avg       0.87      0.88      0.87       400\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y_test, y_pred)\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed982556",
+   "metadata": {},
+   "source": [
+    "## SVM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "a5cb40b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear kernel did not work\n",
+    "model2 = SVC(kernel='rbf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "844bfe57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SVC()"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model2.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "31da357d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model2.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "4fb4e90d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[336  13]\n",
+      " [ 34  17]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "c32c2572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.96      0.93       349\n",
+      "           1       0.57      0.33      0.42        51\n",
+      "\n",
+      "    accuracy                           0.88       400\n",
+      "   macro avg       0.74      0.65      0.68       400\n",
+      "weighted avg       0.86      0.88      0.87       400\n",
       "\n"
      ]
     }
@@ -982,8 +1080,135 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 107,
+   "id": "30f4b972",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8825"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c87c7f92",
+   "metadata": {},
+   "source": [
+    "## Decision tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "831c41b7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model3 = tree.DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "fe78de94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model3 = model3.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "ac6fec76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model3.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "201827b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[303  46]\n",
+      " [ 23  28]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "2a1f9f2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.87      0.90       349\n",
+      "           1       0.38      0.55      0.45        51\n",
+      "\n",
+      "    accuracy                           0.83       400\n",
+      "   macro avg       0.65      0.71      0.67       400\n",
+      "weighted avg       0.86      0.83      0.84       400\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y_test, y_pred)\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "7eaa7ec5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8275"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d6cfa30f",
+   "id": "2d50cbfb",
    "metadata": {},
    "outputs": [],
    "source": []
