Random Forest model

--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
-   "id": "371a385b",
+   "execution_count": 117,
+   "id": "543c6e4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,14 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import confusion_matrix, classification_report, accuracy_score\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn import tree"
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1c4384db",
+   "id": "928b5951",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97018aa1",
+   "id": "0e30fb89",
    "metadata": {},
    "source": [
     "#### Filter to red wines only"
@@ -198,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "a3e76ae3",
+   "id": "d6809fa3",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09e0e88c",
+   "id": "b4abb31d",
    "metadata": {},
    "source": [
     "#### Categorize quality to >=7 as Good and < 7 and Not good"
@@ -228,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "73fb4871",
+   "id": "da422420",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a47ff264",
+   "id": "65a367d3",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +514,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71a2bd10",
+   "id": "bedd944e",
    "metadata": {},
    "source": [
     "#### Create Target and Features"
@@ -522,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1165fc9c",
+   "id": "2ecbe164",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "48c5b62b",
+   "id": "fc81813e",
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "eee76bb9",
+   "id": "d03cb23d",
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceb86d24",
+   "id": "6dd5446e",
    "metadata": {},
    "source": [
     "#### Scale the data"
@@ -796,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "51a0f211",
+   "id": "b4df7e8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "48a01a4a",
+   "id": "10d1cedf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +817,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1fdb64f9",
+   "id": "eba7751a",
    "metadata": {},
    "source": [
     "#### Split the data into test and train"
@@ -825,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "fe937682",
+   "id": "5b62b994",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +837,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "f36199b5",
+   "id": "c112536c",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "ecf7aa08",
+   "id": "d921af7b",
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58ce1e4",
+   "id": "c1620d47",
    "metadata": {},
    "source": [
     "## Logisitic model"
@@ -888,17 +889,17 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "4434669d",
+   "id": "aa0c6540",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model1 = LogisticRegression(solver='lbfgs',random_state=1)"
+    "model1 = LogisticRegression(solver='lbfgs',random_state=7)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "b347df20",
+   "id": "dec1a2b8",
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "996329f6",
+   "id": "223a7a62",
    "metadata": {},
    "source": [
     "#### Model predictions"
@@ -927,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "28c2ff36",
+   "id": "ba2a743c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +938,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "c7bdb531",
+   "id": "32cf0820",
    "metadata": {},
    "outputs": [
     {
@@ -957,7 +958,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "10833b16",
+   "id": "7f9c5bd2",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed982556",
+   "id": "789bee21",
    "metadata": {},
    "source": [
     "## SVM"
@@ -992,18 +993,18 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "a5cb40b7",
+   "id": "94b244f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Linear kernel did not work\n",
-    "model2 = SVC(kernel='rbf')"
+    "model2 = SVC(kernel='rbf',random_state=7)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "844bfe57",
+   "id": "ddf2bec2",
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "31da357d",
+   "id": "ba953f53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1035,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "4fb4e90d",
+   "id": "26eae2f3",
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "c32c2572",
+   "id": "0c0f199c",
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "30f4b972",
+   "id": "6ec5f30c",
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c87c7f92",
+   "id": "d5b0ebba",
    "metadata": {},
    "source": [
     "## Decision tree"
@@ -1109,18 +1110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "id": "831c41b7",
+   "execution_count": 119,
+   "id": "b2d4d367",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model3 = tree.DecisionTreeClassifier()"
+    "model3 = tree.DecisionTreeClassifier(random_state=7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
-   "id": "fe78de94",
+   "execution_count": 120,
+   "id": "7b69ddef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,8 +1130,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
-   "id": "ac6fec76",
+   "execution_count": 121,
+   "id": "c80c49fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1139,16 +1140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "id": "201827b7",
+   "execution_count": 122,
+   "id": "97cde5f2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[303  46]\n",
-      " [ 23  28]]\n"
+      "[[305  44]\n",
+      " [ 24  27]]\n"
      ]
     }
    ],
@@ -1159,8 +1160,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "2a1f9f2f",
+   "execution_count": 123,
+   "id": "6cc19025",
    "metadata": {},
    "outputs": [
     {
@@ -1170,10 +1171,10 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       0.93      0.87      0.90       349\n",
-      "           1       0.38      0.55      0.45        51\n",
+      "           1       0.38      0.53      0.44        51\n",
       "\n",
       "    accuracy                           0.83       400\n",
-      "   macro avg       0.65      0.71      0.67       400\n",
+      "   macro avg       0.65      0.70      0.67       400\n",
       "weighted avg       0.86      0.83      0.84       400\n",
       "\n"
      ]
@@ -1186,17 +1187,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "7eaa7ec5",
+   "execution_count": 124,
+   "id": "0433d751",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8275"
+       "0.83"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af83401c",
+   "metadata": {},
+   "source": [
+    "## Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "626c25c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model4 = RandomForestClassifier(n_estimators=128,random_state=7) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "206abd06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model4 = model4.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "ceaf340e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model4.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "2bbd2ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[333  16]\n",
+      " [ 25  26]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "c649d76f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.95      0.94       349\n",
+      "           1       0.62      0.51      0.56        51\n",
+      "\n",
+      "    accuracy                           0.90       400\n",
+      "   macro avg       0.77      0.73      0.75       400\n",
+      "weighted avg       0.89      0.90      0.89       400\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "report = classification_report(y_test, y_pred)\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "2c9eb0a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8975"
+      ]
+     },
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,8 +1314,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 139,
+   "id": "bbd0be1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>importance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>ph</td>\n",
+       "      <td>0.169798</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>volatile_acidity</td>\n",
+       "      <td>0.120064</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>alcohol</td>\n",
+       "      <td>0.112396</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>density</td>\n",
+       "      <td>0.092389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>total_sulfur_dioxide</td>\n",
+       "      <td>0.083003</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>citric_acid</td>\n",
+       "      <td>0.079479</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>fixed_acidity</td>\n",
+       "      <td>0.075408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>chlorides</td>\n",
+       "      <td>0.072150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>residual_sugar</td>\n",
+       "      <td>0.071893</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>sulphates</td>\n",
+       "      <td>0.062759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>free_sulfur_dioxide</td>\n",
+       "      <td>0.060662</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 feature  importance\n",
+       "10                    ph    0.169798\n",
+       "1       volatile_acidity    0.120064\n",
+       "9                alcohol    0.112396\n",
+       "7                density    0.092389\n",
+       "6   total_sulfur_dioxide    0.083003\n",
+       "2            citric_acid    0.079479\n",
+       "0          fixed_acidity    0.075408\n",
+       "4              chlorides    0.072150\n",
+       "3         residual_sugar    0.071893\n",
+       "8              sulphates    0.062759\n",
+       "5    free_sulfur_dioxide    0.060662"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "importance = model4.feature_importances_\n",
+    "columns = X.columns\n",
+    "import_df = pd.DataFrame({'feature':columns, 'importance':importance})\n",
+    "import_df = import_df.sort_values([\"importance\"], ascending=False)\n",
+    "import_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2d50cbfb",
+   "id": "6d0b47d1",
    "metadata": {},
    "outputs": [],
    "source": []
