--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "576ec5c3",
+   "execution_count": 158,
+   "id": "39d38ad7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,14 @@
     "from sklearn.svm import SVC\n",
     "from sklearn import tree\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import GradientBoostingClassifier"
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from imblearn.over_sampling import RandomOverSampler"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "75170bd8",
+   "id": "7a46e9a6",
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb2fe522",
+   "id": "3b690390",
    "metadata": {},
    "source": [
     "#### Filter to red wines only"
@@ -200,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "29ef8a4c",
+   "id": "b9bd19f5",
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d342b471",
+   "id": "d3303a98",
    "metadata": {},
    "source": [
     "#### Categorize quality to >=7 as Good and < 7 and Not good"
@@ -230,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "3258e1f3",
+   "id": "0a022824",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e9be7f85",
+   "id": "ea5cea72",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d561af3",
+   "id": "38109cde",
    "metadata": {},
    "source": [
     "#### Create Target and Features"
@@ -524,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "d8812dc8",
+   "id": "aa11091c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "ad2be41a",
+   "id": "949c72d8",
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b8f3b20d",
+   "id": "2770f211",
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +790,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4170cb1",
+   "id": "e08f10b2",
    "metadata": {},
    "source": [
     "#### Scale the data"
@@ -798,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "982f8044",
+   "id": "9a00218d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +809,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "007baf64",
+   "id": "84d8d14f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84295089",
+   "id": "22636b32",
    "metadata": {},
    "source": [
     "#### Split the data into test and train"
@@ -827,7 +828,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "cd733832",
+   "id": "f3588374",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +839,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "cc4ea47a",
+   "id": "d2aa0f8f",
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +862,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "2c3c9a07",
+   "id": "87596f88",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057a41b5",
+   "id": "a99b26ef",
    "metadata": {},
    "source": [
     "## Logisitic model"
@@ -890,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "107b9acf",
+   "id": "d9b3efd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "0a150fc6",
+   "id": "3314ad3f",
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4d79eb",
+   "id": "db074be7",
    "metadata": {},
    "source": [
     "#### Model predictions"
@@ -929,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "5a146beb",
+   "id": "65355899",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +940,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "4ff22ae6",
+   "id": "0f199d84",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "b9abe30b",
+   "id": "6cc4ac8f",
    "metadata": {},
    "outputs": [
     {
@@ -985,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9ae29a4",
+   "id": "d893dea0",
    "metadata": {},
    "source": [
     "## SVM"
@@ -994,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "f14ccd29",
+   "id": "846a32e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1005,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "eb8c4cc6",
+   "id": "6c70e772",
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "e461c02d",
+   "id": "08e5d4e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1037,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "2db75322",
+   "id": "bf0157f7",
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "92f6fe11",
+   "id": "f18adb7c",
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "d2152c3f",
+   "id": "4bba3c70",
    "metadata": {},
    "outputs": [
     {
@@ -1103,7 +1104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17212d25",
+   "id": "db3cbdc4",
    "metadata": {},
    "source": [
     "## Decision tree"
@@ -1112,7 +1113,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "id": "ca10cbe8",
+   "id": "23ac6f4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1122,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "9add4eb3",
+   "id": "52290004",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1133,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "id": "f3aafeb4",
+   "id": "7443a688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1142,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": 122,
-   "id": "4266ccd8",
+   "id": "f378d0b5",
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1163,7 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "id": "16d91c1d",
+   "id": "cc3b5d1f",
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1190,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "id": "5344711f",
+   "id": "670263d1",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "f2965f5a",
+   "id": "4ecf3058",
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ee7d38",
+   "id": "77f1deeb",
    "metadata": {},
    "source": [
     "## Random Forest Classifier"
@@ -1337,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "id": "b9725caf",
+   "id": "37c00dfd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1347,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "cfb8e341",
+   "id": "9a999fe4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1358,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "id": "281a5050",
+   "id": "871da15c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1368,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "b336d79a",
+   "id": "89dd2dfe",
    "metadata": {},
    "outputs": [
     {
@@ -1387,7 +1388,7 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "id": "62585a89",
+   "id": "f48c79ef",
    "metadata": {},
    "outputs": [
     {
@@ -1414,7 +1415,7 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "id": "511fed9d",
+   "id": "c3026bc3",
    "metadata": {},
    "outputs": [
     {
@@ -1435,7 +1436,7 @@
   {
    "cell_type": "code",
    "execution_count": 139,
-   "id": "aab0c179",
+   "id": "03fdc976",
    "metadata": {},
    "outputs": [
     {
@@ -1553,7 +1554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1de787ec",
+   "id": "1119a4d1",
    "metadata": {},
    "source": [
     "## Gradient Boosted Tree"
@@ -1562,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "e0f1b368",
+   "id": "5208c4ca",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1626,7 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "id": "b3abe4a5",
+   "id": "1fdc61f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1637,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "a110ea73",
+   "id": "2f6e3005",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "34ff9171",
+   "id": "4277f5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1656,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": 154,
-   "id": "bbce1c26",
+   "id": "b4894de6",
    "metadata": {},
    "outputs": [
     {
@@ -1676,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 155,
-   "id": "e204bddb",
+   "id": "90e54008",
    "metadata": {},
    "outputs": [
     {
@@ -1703,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "id": "8f5660dd",
+   "id": "fc6916f0",
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1725,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "b4da62e2",
+   "id": "b64f3e66",
    "metadata": {},
    "outputs": [
     {
@@ -1841,9 +1842,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69118d19",
+   "metadata": {},
+   "source": [
+    "## Random Over Sampling"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14b1a898",
+   "id": "1ad859ac",
    "metadata": {},
    "outputs": [],
    "source": []
