Messages to EDA file

--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "5290e2f7",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "id": "9f43573e",
    "metadata": {},
    "outputs": [
@@ -189,7 +189,7 @@
        "4  9.4        5   5   red  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "id": "3237ae81",
    "metadata": {},
    "outputs": [
@@ -220,20 +220,20 @@
        "(1599, 14)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "red_df = red_df[red_df[\"color\"] == \"red\"]\n",
+    "red_df = all_df[red_df[\"color\"] == \"red\"]\n",
     "red_df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c931b6c8",
+   "execution_count": 20,
+   "id": "ae425adf",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "bf843f9a",
+   "id": "927b20d9",
    "metadata": {},
    "outputs": [
     {
