--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -3706,7 +3706,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "549da9d7",
+   "id": "5a8b993a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3749,7 +3749,7 @@
   {
    "cell_type": "code",
    "execution_count": 310,
-   "id": "e29ca06d",
+   "id": "f6a99f2c",
    "metadata": {},
    "outputs": [
     {
@@ -3841,7 +3841,7 @@
   {
    "cell_type": "code",
    "execution_count": 311,
-   "id": "b603f0de",
+   "id": "752ef32a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3859,8 +3859,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
-   "id": "5983c87c",
+   "execution_count": 335,
+   "id": "9457419f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3878,8 +3878,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
-   "id": "3018ecd0",
+   "execution_count": 336,
+   "id": "3a91032b",
    "metadata": {},
    "outputs": [
     {
@@ -3934,7 +3934,7 @@
        "accuracy    0.87750  0.877500  0.877500   0.8775"
       ]
      },
-     "execution_count": 322,
+     "execution_count": 336,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3946,8 +3946,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
-   "id": "3e04e2ae",
+   "execution_count": 337,
+   "id": "54f45ffc",
    "metadata": {},
    "outputs": [
     {
@@ -3980,65 +3980,150 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.980843</td>\n",
-       "      <td>0.733524</td>\n",
-       "      <td>0.839344</td>\n",
-       "      <td>349.000</td>\n",
+       "      <td>0.908108</td>\n",
+       "      <td>0.962751</td>\n",
+       "      <td>0.934631</td>\n",
+       "      <td>349.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.330935</td>\n",
-       "      <td>0.901961</td>\n",
-       "      <td>0.484211</td>\n",
-       "      <td>51.000</td>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.419753</td>\n",
+       "      <td>51.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>accuracy</th>\n",
-       "      <td>0.755000</td>\n",
-       "      <td>0.755000</td>\n",
-       "      <td>0.755000</td>\n",
-       "      <td>0.755</td>\n",
+       "      <td>0.882500</td>\n",
+       "      <td>0.882500</td>\n",
+       "      <td>0.882500</td>\n",
+       "      <td>0.8825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>macro avg</th>\n",
-       "      <td>0.655889</td>\n",
-       "      <td>0.817743</td>\n",
-       "      <td>0.661777</td>\n",
-       "      <td>400.000</td>\n",
+       "      <td>0.737387</td>\n",
+       "      <td>0.648042</td>\n",
+       "      <td>0.677192</td>\n",
+       "      <td>400.0000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>weighted avg</th>\n",
-       "      <td>0.897980</td>\n",
-       "      <td>0.755000</td>\n",
-       "      <td>0.794065</td>\n",
-       "      <td>400.000</td>\n",
+       "      <td>0.864574</td>\n",
+       "      <td>0.882500</td>\n",
+       "      <td>0.868984</td>\n",
+       "      <td>400.0000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              precision    recall  f1-score  support\n",
-       "0              0.980843  0.733524  0.839344  349.000\n",
-       "1              0.330935  0.901961  0.484211   51.000\n",
-       "accuracy       0.755000  0.755000  0.755000    0.755\n",
-       "macro avg      0.655889  0.817743  0.661777  400.000\n",
-       "weighted avg   0.897980  0.755000  0.794065  400.000"
+       "              precision    recall  f1-score   support\n",
+       "0              0.908108  0.962751  0.934631  349.0000\n",
+       "1              0.566667  0.333333  0.419753   51.0000\n",
+       "accuracy       0.882500  0.882500  0.882500    0.8825\n",
+       "macro avg      0.737387  0.648042  0.677192  400.0000\n",
+       "weighted avg   0.864574  0.882500  0.868984  400.0000"
       ]
      },
-     "execution_count": 324,
+     "execution_count": 337,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_out10"
+    "df_out2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "id": "21f753e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_out2 = df_out2[1:3]\n",
+    "df_out3 = df_out3[1:3]\n",
+    "df_out4 = df_out4[1:3]\n",
+    "df_out5 = df_out5[1:3]\n",
+    "df_out6 = df_out6[1:3]\n",
+    "df_out7 = df_out7[1:3]\n",
+    "df_out8 = df_out8[1:3]\n",
+    "df_out9 = df_out9[1:3]\n",
+    "df_out10= df_out10[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "id": "ae296d1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>f1-score</th>\n",
+       "      <th>support</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.367188</td>\n",
+       "      <td>0.921569</td>\n",
+       "      <td>0.52514</td>\n",
+       "      <td>51.0000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>accuracy</th>\n",
+       "      <td>0.787500</td>\n",
+       "      <td>0.787500</td>\n",
+       "      <td>0.78750</td>\n",
+       "      <td>0.7875</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          precision    recall  f1-score  support\n",
+       "1          0.367188  0.921569   0.52514  51.0000\n",
+       "accuracy   0.787500  0.787500   0.78750   0.7875"
+      ]
+     },
+     "execution_count": 350,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_out7"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1201025e",
+   "id": "57122f90",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4046,7 +4131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0160445",
+   "id": "fdb06204",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4054,7 +4139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d37be434",
+   "id": "63aaa373",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4062,7 +4147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719fa645",
+   "id": "55875149",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4070,7 +4155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe3e0065",
+   "id": "e884d82d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4078,7 +4163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f601b55b",
+   "id": "5bf40f64",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4086,15 +4171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "affae65b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f72b1822",
+   "id": "f9cd45fe",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4112,7 +4189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecba2c8d",
+   "id": "1c04a6ca",
    "metadata": {},
    "outputs": [],
    "source": []
