--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1075509d",
+   "metadata": {},
+   "source": [
+    "### Analysis of Red wine data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "5290e2f7",
@@ -3960,7 +3968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 146,
    "id": "cc13c894",
    "metadata": {},
    "outputs": [
@@ -4139,7 +4147,7 @@
        "accuracy   0.755000  0.755000  0.755000"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4152,7 +4160,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 147,
+   "id": "672a5863",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.523810</td>\n",
+       "      <td>0.431373</td>\n",
+       "      <td>0.473118</td>\n",
+       "      <td>0.8775</td>\n",
+       "      <td>0.8775</td>\n",
+       "      <td>0.8775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.566667</td>\n",
+       "      <td>0.333333</td>\n",
+       "      <td>0.419753</td>\n",
+       "      <td>0.8825</td>\n",
+       "      <td>0.8825</td>\n",
+       "      <td>0.8825</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.380282</td>\n",
+       "      <td>0.529412</td>\n",
+       "      <td>0.442623</td>\n",
+       "      <td>0.8300</td>\n",
+       "      <td>0.8300</td>\n",
+       "      <td>0.8300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.619048</td>\n",
+       "      <td>0.509804</td>\n",
+       "      <td>0.559140</td>\n",
+       "      <td>0.8975</td>\n",
+       "      <td>0.8975</td>\n",
+       "      <td>0.8975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.564103</td>\n",
+       "      <td>0.431373</td>\n",
+       "      <td>0.488889</td>\n",
+       "      <td>0.8850</td>\n",
+       "      <td>0.8850</td>\n",
+       "      <td>0.8850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.353846</td>\n",
+       "      <td>0.901961</td>\n",
+       "      <td>0.508287</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.7775</td>\n",
+       "      <td>0.7775</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.367188</td>\n",
+       "      <td>0.921569</td>\n",
+       "      <td>0.525140</td>\n",
+       "      <td>0.7875</td>\n",
+       "      <td>0.7875</td>\n",
+       "      <td>0.7875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.340909</td>\n",
+       "      <td>0.882353</td>\n",
+       "      <td>0.491803</td>\n",
+       "      <td>0.7675</td>\n",
+       "      <td>0.7675</td>\n",
+       "      <td>0.7675</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.364341</td>\n",
+       "      <td>0.921569</td>\n",
+       "      <td>0.522222</td>\n",
+       "      <td>0.7850</td>\n",
+       "      <td>0.7850</td>\n",
+       "      <td>0.7850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.330935</td>\n",
+       "      <td>0.901961</td>\n",
+       "      <td>0.484211</td>\n",
+       "      <td>0.7550</td>\n",
+       "      <td>0.7550</td>\n",
+       "      <td>0.7550</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2       3       4       5\n",
+       "0  0.523810  0.431373  0.473118  0.8775  0.8775  0.8775\n",
+       "1  0.566667  0.333333  0.419753  0.8825  0.8825  0.8825\n",
+       "2  0.380282  0.529412  0.442623  0.8300  0.8300  0.8300\n",
+       "3  0.619048  0.509804  0.559140  0.8975  0.8975  0.8975\n",
+       "4  0.564103  0.431373  0.488889  0.8850  0.8850  0.8850\n",
+       "5  0.353846  0.901961  0.508287  0.7775  0.7775  0.7775\n",
+       "6  0.367188  0.921569  0.525140  0.7875  0.7875  0.7875\n",
+       "7  0.340909  0.882353  0.491803  0.7675  0.7675  0.7675\n",
+       "8  0.364341  0.921569  0.522222  0.7850  0.7850  0.7850\n",
+       "9  0.330935  0.901961  0.484211  0.7550  0.7550  0.7550"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output_df = pd.DataFrame([y.values.ravel() for x , y in output_df.groupby(np.arange(len(df))//2)])\n",
+    "output_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "id": "ed706f45",
    "metadata": {},
    "outputs": [],
