--- a/all_models_EDA.ipynb
+++ b/all_models_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7ef73d19",
+   "id": "fa61566e",
    "metadata": {},
    "source": [
     "### Preliminary data pre-processing"
@@ -43,12 +43,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6069249f",
+   "id": "6123f8e2",
    "metadata": {},
    "source": [
     "### Import csv output from PostGres pgadmin database\n",
     "\n",
-    "#### Features used in the models\n",
+    "#### Features used in the models (based on physicochemical tests):\n",
     "\n",
     "- 1 - fixed acidity\n",
     "\n",
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13923375",
+   "id": "9b596bc5",
    "metadata": {},
    "source": [
     "#### Range of feature values justifies scaling before using in ML models"
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4666981d",
+   "id": "fe4c9ffb",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66e5adca",
+   "id": "a01f7054",
    "metadata": {},
    "source": [
     "#### Dichitomous categorization of quality scores. Justification to try over and undersampling."
@@ -861,7 +861,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "22903970",
+   "id": "bcc3019d",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a56ceac2",
+   "id": "4d8be2ef",
    "metadata": {},
    "outputs": [
     {
