--- a/all_models_EDA.ipynb
+++ b/all_models_EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa61566e",
+   "id": "ccaa76cc",
    "metadata": {},
    "source": [
     "### Preliminary data pre-processing"
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6123f8e2",
+   "id": "28cbb0c4",
    "metadata": {},
    "source": [
     "### Import csv output from PostGres pgadmin database\n",
@@ -70,7 +70,12 @@
     "\n",
     "- 10 - sulphates\n",
     "\n",
-    "- 11 - alcohol"
+    "- 11 - alcohol\n",
+    "\n",
+    "Reference:\n",
+    "\n",
+    "P. Cortez, A. Cerdeira, F. Almeida, T. Matos and J. Reis. Modeling wine preferences by data mining from physicochemical properties.\n",
+    "In Decision Support Systems, Elsevier, 47(4):547-553, 2009."
    ]
   },
   {
@@ -242,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b596bc5",
+   "id": "228c85d5",
    "metadata": {},
    "source": [
     "#### Range of feature values justifies scaling before using in ML models"
@@ -251,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fe4c9ffb",
+   "id": "dd989573",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +857,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01f7054",
+   "id": "f0835471",
    "metadata": {},
    "source": [
     "#### Dichitomous categorization of quality scores. Justification to try over and undersampling."
@@ -861,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "bcc3019d",
+   "id": "4ba4254c",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4d8be2ef",
+   "id": "a2edf5be",
    "metadata": {},
    "outputs": [
     {
