--- a/all_models_red.ipynb
+++ b/all_models_red.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "83475e9a",
+   "id": "4784cdd1",
    "metadata": {},
    "source": [
     "### Analysis of Red wine data"
@@ -2352,7 +2352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae37f57b",
+   "id": "ccadfcb9",
    "metadata": {},
    "source": [
     "#### Choose the learning_rate based on highest Accuracy score = 0.5"
@@ -2578,7 +2578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "156ecfb8",
+   "id": "5301cbbe",
    "metadata": {},
    "source": [
     "### The next 3 models use oversampling and undersampling because of imbalanced sample sizes."
@@ -2639,7 +2639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86cae65e",
+   "id": "079f7138",
    "metadata": {},
    "source": [
     "#### New balanced sample sizes"
@@ -2917,7 +2917,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e6150a0",
+   "id": "e5276369",
    "metadata": {},
    "source": [
     "#### New balanced sample sizes"
@@ -3189,7 +3189,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "7c895fdd",
+   "id": "e952dd3b",
    "metadata": {},
    "outputs": [
     {
@@ -3764,6 +3764,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59a95b34",
+   "metadata": {},
+   "source": [
+    "#### Attempt a cool graphic of the decision tree model but a little too complicated"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "id": "8dd1adaf",
@@ -3798,21 +3806,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "id": "1b34cbbc",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'0': {'precision': 0.9189944134078212, 'recall': 0.9426934097421203, 'f1-score': 0.9306930693069307, 'support': 349}, '1': {'precision': 0.5238095238095238, 'recall': 0.43137254901960786, 'f1-score': 0.4731182795698925, 'support': 51}, 'accuracy': 0.8775, 'macro avg': {'precision': 0.7214019686086726, 'recall': 0.687032979380864, 'f1-score': 0.7019056744384116, 'support': 400}, 'weighted avg': {'precision': 0.8686083399840383, 'recall': 0.8775, 'f1-score': 0.8723522836154584, 'support': 400}}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "reportout1 = classification_report(y_test, y_pred1, output_dict=True)\n",
-    "print(reportout1)"
+    "# reportout1 = classification_report(y_test, y_pred1, output_dict=True)\n",
+    "# print(reportout1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2067f7fe",
+   "metadata": {},
+   "source": [
+    "#### Combine all the model outputs for visualization into Tableau"
    ]
   },
   {
@@ -4245,7 +4253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a0b9c4",
+   "id": "209d4c3d",
    "metadata": {},
    "source": [
     "#### columns\n",
@@ -4258,7 +4266,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "6736ace6",
+   "id": "cf0776dc",
    "metadata": {},
    "outputs": [
     {
@@ -4412,7 +4420,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "76d335b2",
+   "id": "92f118e8",
    "metadata": {},
    "outputs": [],
    "source": [
